# optica

./: .env.example  LICENSE  README.md  docker-compose.yml
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  incident_template.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4bd58ba3ac29_initial_schema.py  e5cae7b8d120_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: incident.py  team.py  user.py
infra/docker/: Dockerfile.api  init-db.sql
infra/keycloak/: optica-realm.json
