[tool.poetry]
name = "optica-backend"
version = "0.1.0"
description = "Optica backend API"
authors = ["Praveen Kodavali"]

[tool.poetry.dependencies]
python = "^3.11"

fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
pydantic-settings = "^2.2.1"
python-jose = "^3.3.0"
requests = "^2.31.0"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"